--- a/_layouts/learning-pathway.html
+++ b/_layouts/learning-pathway.html
@@ -61,7 +61,7 @@ layout: base
 		{% endif %}
 		</ul>
 	</details>
-	{% include _includes/tutorial_list.html sub=material_list page=page responsive=false async=hidetimes customheader=section.custom %}
+	{% include _includes/tutorial_list.html sub=material_list %}
 	{% endif %}
     {% endfor %}
 </section>
