link to maintainer page from topic page

--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -123,6 +123,7 @@ layout: base
     <p>This material is reviewed by our Editorial Board:</p>
     {% assign editorial_board = topic.editorial_board | sorted %}
     {% include _includes/contributor-list.html contributors=editorial_board badge=true %}
+    <p>Are you on the editorial board or want to help out with this topic? View the <a href="maintainer.html">topic maintainer page</a> for ways to improve this topic!</p>
     {% endif %}
 
 
