--- a/_layouts/topic-maintainer.html
+++ b/_layouts/topic-maintainer.html
@@ -59,7 +59,7 @@ This is a new, experimental "Editorial Board Home" for a given topic. It is inte
 			<td>By providing a Learning Pathway CTA, we can help guide learners to the best resources for learning about this topic.</td>
 		</tr>
 		<tr>
-			<td>Review Feedback forms</td>
+			<td>Review Feedback Received</td>
 			<td> Ongoing 🔁 </td>
 			<td> Review all <a href="https://training.galaxyproject.org/feedback#topic-{{topic.title | slugify }}" >feedback received for the {{topic.title}} topic</a> and create GitHub issues or PRs where needed. </td>
 		</tr>
